[Lnx] Fix building on Linux after reorganization

--- a/ABench/CMakeLists.txt
+++ b/ABench/CMakeLists.txt
@@ -8,12 +8,14 @@ FILE(GLOB ABENCH_MATH_SOURCES     Math/*.cpp)
 FILE(GLOB ABENCH_MATH_HEADERS     Math/*.hpp)
 FILE(GLOB ABENCH_SCENE_SOURCES    Scene/*.cpp)
 FILE(GLOB ABENCH_SCENE_HEADERS    Scene/*.hpp)
-FILE(GLOB ABENCH_RENDERER_SOURCES Renderer/*.cpp)
-FILE(GLOB ABENCH_RENDERER_HEADERS Renderer/*.hpp)
+FILE(GLOB ABENCH_RENDERER_LOWLEVEL_SOURCES Renderer/LowLevel/*.cpp)
+FILE(GLOB ABENCH_RENDERER_LOWLEVEL_HEADERS Renderer/LowLevel/*.hpp)
+FILE(GLOB ABENCH_RENDERER_HIGHLEVEL_SOURCES Renderer/HighLevel/*.cpp)
+FILE(GLOB ABENCH_RENDERER_HIGHLEVEL_HEADERS Renderer/HighLevel*.hpp)
 FILE(GLOB ABENCH_COMMON_LINUX_SOURCES   Common/Linux/*.cpp)
 FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
-FILE(GLOB ABENCH_RENDERER_LINUX_SOURCES Renderer/Linux/*.cpp)
-FILE(GLOB ABENCH_RENDERER_LINUX_HEADERS Renderer/Linux/*.hpp)
+FILE(GLOB ABENCH_RENDERER_LOWLEVEL_LINUX_SOURCES Renderer/LowLevel/Linux/*.cpp)
+FILE(GLOB ABENCH_RENDERER_LOWLEVEL_LINUX_HEADERS Renderer/LowLevel/Linux/*.hpp)
 
 PKG_CHECK_MODULES(ABENCH_PKG_DEPS REQUIRED
                   xcb
@@ -38,9 +40,10 @@ ADD_EXECUTABLE(ABench
                ${ABENCH_COMMON_SOURCES} ${ABENCH_COMMON_HEADERS}
                ${ABENCH_MATH_SOURCES} ${ABENCH_MATH_HEADERS}
                ${ABENCH_SCENE_SOURCES} ${ABENCH_SCENE_HEADERS}
-               ${ABENCH_RENDERER_SOURCES} ${ABENCH_RENDERER_HEADERS}
+               ${ABENCH_RENDERER_LOWLEVEL_SOURCES} ${ABENCH_RENDERER_LOWLEVEL_HEADERS}
+               ${ABENCH_RENDERER_HIGHLEVEL_SOURCES} ${ABENCH_RENDERER_HIGHLEVEL_HEADERS}
                ${ABENCH_COMMON_LINUX_SOURCES} ${ABENCH_COMMON_LINUX_HEADERS}
-               ${ABENCH_RENDERER_LINUX_SOURCES} ${ABENCH_RENDERER_LINUX_HEADERS})
+               ${ABENCH_RENDERER_LOWLEVEL_LINUX_SOURCES} ${ABENCH_RENDERER_LOWLEVEL_LINUX_HEADERS})
 
 TARGET_LINK_LIBRARIES(ABench glslang SPIRV OGLCompiler OSDependent dl fbxsdk freeimage pthread
                       ${ABENCH_PKG_DEPS_LIBRARIES})
