--- a/ABenchTest/CMakeLists.txt
+++ b/ABenchTest/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(ABENCHTEST_MODULES_SOURCES        ${ABENCH_DIRECTORY}/Common/FBXFile.cpp
                                       ${ABENCH_DIRECTORY}/Common/Linux/Logger.cpp
                                       ${ABENCH_DIRECTORY}/Common/Linux/Common.cpp
                                       ${ABENCH_DIRECTORY}/Common/Linux/Timer.cpp
+                                      ${ABENCH_DIRECTORY}/Common/Linux/FS.cpp
                                       ${ABENCH_DIRECTORY}/Math/Vector.cpp
                                       )
 
