--- a/ABenchTest/ABenchTest.vcxproj.filters
+++ b/ABenchTest/ABenchTest.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Tests\WindowTest.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\RingAverageTest.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Tests">
